[Fix] The green arrow for <li class="active"> isn't visible on the Holiday Market Landing Page

--- a/web/less/frontend/modules/marketplace.less
+++ b/web/less/frontend/modules/marketplace.less
@@ -233,7 +233,7 @@ div.onecolumn {
 
   .navbar-inner {
     position: relative;
-    min-height: 50px;
+    height: 50px;
     width: 100%;
     clear: both;
     padding: 0;
@@ -243,7 +243,7 @@ div.onecolumn {
     .border-radius(0);
 
     .centering {
-      width: 800px;
+      .size(70px, 800px);
       overflow: hidden;
       display: block;
       margin: 0 auto;
